--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -9,7 +9,7 @@
     
     {% for p in posts %} 
         <hr>                        <!--줄 긋기-->
-        <h2>{{ p.title }}</h2>      <!--제목-->
+    <h2><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>      <!--제목-->
         <h4>{{ p.create_at }}</h4>  <!--시간-->
         <p>{{ p.content }}</p>      <!--내용-->
     {% endfor %} 
