--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Blog</h1>
     
-    {% for p in posts %} 
+    {% for p in post_list %} 
         <hr>                        <!--줄 긋기-->
     <h2><a href="{{ p.get_absolute_url }}">{{ p.title }}</a></h2>      <!--제목-->
         <h4>{{ p.create_at }}</h4>  <!--시간-->
