--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,9 +5,9 @@
 
 <head>
     <title>Blog</title>
-    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %} " media=sc>
+    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %} " media="screen">
 
-    <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
@@ -91,7 +91,7 @@
                     <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
                     <div class="card-body">
                         <h2 class="card-title">{{ p.title }}</h2>
-                        <p class="card-text">{{ p.content }}</p>
+                        <p class="card-text">{{ p.contents }}</p>
                         <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
                     </div>
                     <div class="card-footer text-muted">
