--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -88,7 +88,11 @@
                 {% for p in post_list %}  //
                 <!-- Blog Post -->
                 <div class="card mb-4">
-                    <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+                    {% if p.head_image %}
+                        <img class="card-img-top" src="{{ p.head_image.url }}" alt= "{{ p }} head image">
+                    {% else %}
+                        <img class="card-img-top" src="https://picsum.photos/570/340" alt="random_image">
+                    {% endif %}
                     <div class="card-body">
                         <h2 class="card-title">{{ p.title }}</h2>
                         <p class="card-text">{{ p.contents }}</p>
