--- a/blog/templates/blog/post_list_copy0.html
+++ b/blog/templates/blog/post_list_copy0.html
@@ -1,28 +1,49 @@
-<!-- 공동된 부분 만들어두기 () -->
+{% extends 'blog/base.html' %}
 
-
-<!DOCTYPE html>
-{% load static %}
-<html>
-
-<head>
-    <title>{% block head_title %}Blog{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen"> 
-
-</head>
-
-<body>
-
-{% include 'blog/navbar.html' %}
-
-
-    <div class="container my-3">
-        <div class="row">
-            <div class="col-md-8 col-lg-9" id="main-area">
-                {% block main_area %}
+    {% block main_area %}
+                <h1>Blog</h1>
+            {% if post_list.exists %}
+                {% for p in post_list %}
+                <!-- Blog Post -->
+                <div class="card mb-4">
+                    {% if  p.head_image %}
+                        <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image">
+                    {% else %}
+                        <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
+                    {% endif %}
+                    <div class="card-body">
+                        <h2 class="card-title">{{ p.title }}</h2>
+                        {% if p.hook_text %}
+                            <h5 class="text-muted">{{ p.hook_text}}</h5>
+                        {% endif %}
+                        <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+                        <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Posted on {{ p.create_at }} by
+                        <a href="#">작성자 명이 들러갈 예정</a>
+                    </div>
+                </div>
+                {% endfor%}
+                {% else %}
+                    <h3>아직 게시물이 없습니다</h3>
+                {% endif %}
                 
-                {% endblock %}
-                
+                <!-- Blog Post -->
+               
+
+                <!-- Pagination -->
+                <ul class="pagination justify-content-center mb-4">
+                    <li class="page-item">
+                        <a class="page-link" href="#">&larr; Older</a>
+                    </li>
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#">Newer &rarr;</a>
+                    </li>
+                </ul>
+    {% endblock %}
+
+
             </div>
 
             <div class="col-md-4 col-lg-3">
@@ -77,7 +98,16 @@
         </div>
     </div>
 
-{% include 'blog/footer.html' %}
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">
+                Copyright &copy; Do It Django A to Z 2021
+            </p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
