--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,10 +2,7 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
-        <h1>Blog {% if category %}
-                <span class="badge badge-secondary">{{ category }}</span>
-                {% endif %}
-        </h1>
+    <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}</h1>
 
     {% if post_list.exists %}
 
@@ -29,6 +26,19 @@
                         <h5 class="text-muted">{{ p.hook_text }}</h5>
                     {% endif %}
                     <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+                    
+
+                    {% if p.tags.exists %}
+                        <i class='fas fa-tags'></i>
+                            {% for tag in p.tags.iterator %}
+                                <a href="{{ tag.get_absolute_url }}"><span class='badge badge pill badge-light'>{{ tag }}</span></a>
+                            {% endfor %}
+                        <br>
+                        <br>    
+                    {% endif %}
+                    
+                    
+                    
                     <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
                 </div>
                 <div class="card-footer text-muted">
