--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,12 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
-    <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}</h1>
+    <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}
+
+        {% if tag %}
+            <span class='badge badge-secondary'>{{ tag }}({{ tag.post_set.count }})</span>
+        {% endif %}
+    </h1>
 
     {% if post_list.exists %}
 
