--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -1,5 +1,5 @@
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-2 ">
         <div class="container">
             <p class="m-0 text-center text-white">
                 Copyright Django Project 2022 센텀직업전문학교
