--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,11 +1,13 @@
 {% load socialaccount %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
+<nav class="navbar navbar-expand-lg navbar-white" style="background-color: #e3f2fd;">
     <div class="container">
         <a class="navbar-brand" href="/">Do It Django</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+    
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -16,6 +18,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about_me/">About Me</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="/board/">Board</a>
                 </li>
             
                 <li class="navbar-nav ml-auto">
@@ -55,10 +60,10 @@
                     <div class="col-md-6">
                         <a role="button" class="btn btn-outline-dark btn-block btn-sm"
                             href="{% provider_login_url 'google' %}"><i class="fab fa-google"></i>&nbsp;&nbsp; Log in with Google</a>
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm "><i class="far fa-envelope"></i>&nbsp&nbsp Log in with E-mail</button>
+                        <button type="button" class="btn btn-outline-dark btn-block btn-sm "><i class="far fa-envelope"></i>&nbsp;&nbsp; Log in with E-mail</button>
                     </div>
                     <div class="col-md-6">
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-envelope"></i>&nbsp&nbsp Sign Up with E-mail</button>
+                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="far fa-envelope"></i>&nbsp;&nbsp; Sign Up with E-mail</button>
                     </div>
                 </div>
             </div>
