--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -1,15 +1,123 @@
+
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>센텀직훈</title>
+    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
+    <link rel="stylesheet" href="{% static 'single_pages/css/landing.css' %}" media="screen">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="/blog/">Blog</a>
-        <a href="/about_me/">About_me</a>
-    </nav>
-    <h2>대문 페이지</h2>
-    <h3>아직 작업중</h3>
+    {% include 'blog/navbar.html' %}
+    <section>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-6 text-light">
+                    <h2 class="mt-5">센텀직훈 Django</h2>
+                    <i class="fa-solid fa-user"></i>
+                    <p>웹프레임워크중 하나인 Django을 이용한 Blog 만들기</p>
+                    <div>Language! <h1 class="text"></h1></div>
+                    <script> 
+                        const $text = document.querySelector(".text");
+
+                        // 글자 모음
+                        const letters = [
+                          "HTML",
+                          "CSS", 
+                          "JavaScript"
+                        ];
+
+                        // 글자 입력 속도
+                        const speed = 100;
+                        let i = 0;
+
+                        // 타이핑 효과
+                        const typing = async () => {  
+                          const letter = letters[i].split("");
+
+                          while (letter.length) {
+                            await wait(speed);
+                            $text.innerHTML += letter.shift(); 
+                          }
+
+                          // 잠시 대기
+                          await wait(800);
+
+                          // 지우는 효과
+                          remove();
+                        }
+
+                        // 글자 지우는 효과
+                        const remove = async () => {
+                          const letter = letters[i].split("");
+
+                          while (letter.length) {
+                            await wait(speed);
+
+                            letter.pop();
+                            $text.innerHTML = letter.join(""); 
+                          }
+
+                          // 다음 순서의 글자로 지정, 타이핑 함수 다시 실행
+                          i = !letters[i+1] ? 0 : i + 1;
+                          typing();
+                        }
+
+                        // 딜레이 기능 ( 마이크로초 )
+                        function wait(ms) {
+                          return new Promise(res => setTimeout(res, ms))
+                        }
+
+                        // 초기 실행
+                        setTimeout(typing, 1500);
+                    </script>
+                    
+                </div>
+                <div class="col-lg-5 mt5">
+                    <h3 class="text-light mt-5">Blog - Recent posts</h3>
+                {% for post in recent_posts %}
+                <div class="card mt-1">
+                    <div class="card-body">
+                        <h6>
+                            <a href="{{ post.get_absolute_url }}" class="text-decoration-none text-dark">
+                                {{ post.title }}
+                            </a>
+                        </h6>
+                        <span class="badge badge-pill badge-light float-right">
+                            {{ post.author.username }}
+                            &nbsp;&nbsp;
+                            {{ post.create_at }}
+                        </span>
+                    </div>
+                    
+                </div>
+                {% endfor %}
+                </div>
+            </div>
+        </div>
+        
+        
+        
+        
+    </section>
+    
+    
+    <div class="fixed-bottom">
+        {% include 'blog/footer.html' %}
+    </div>
+    
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 </html>
