--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -2,8 +2,10 @@
     <footer class="py-2 ">
         <div class="container">
             <p class="m-0 text-center text-white">
-                Copyright Django Project 2022 센텀직업전문학교
+                COPYRIGHT ⓒ2023 Choi YongOk. All Rights Reserved.
             </p>
         </div>
         <!-- /.container -->
     </footer>
+
+ 
