--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -4,7 +4,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>센텀직훈</title>
+    <title>플랜티 : PLANTY</title>
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'single_pages/css/about_me.css' %}" media="screen">
 </head>
@@ -19,7 +19,7 @@
         <div class="container mt-4">
             <div class="row">
                 <div class="col-lg-8">
-                    <h1> 센텀직업전문학교</h1>
+                    <h1> 플랜티 : PLANTY </h1>
                     <br>
                     <p>
                         센텀은 디자인, 영상, IT를 전문으로 교육하는 기관입니다.<br>
@@ -216,7 +216,7 @@
         
         
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
         
       </div>
     </div>
