--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,7 +6,6 @@
     <title>{% block head_title %}Blog{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
 
-    <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,7 +27,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search for..." id="search-input">
                         <span class="input-group-btn">
-                                <button class="btn btn-secondary" type="button" onclick="searchPost();">Go!</button>
+                                <button class="btn btn-outline-secondary" type="button" onclick="searchPost();">Go!</button>
                             </span>
                     </div>
                 </div>
@@ -50,13 +49,7 @@
                     }
                  });
             </script>
-            
-            
-            
-            
-            
-            
-            
+
 
             <!-- Categories Widget -->
             <div class="card my-4" id="categories-card">
