--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -10,7 +10,7 @@
     <form method="post" id="comment-form"> {% csrf_token %}
         {{ form | crispy }}
         <br>
-        <button type="submit" class="btn btn-primary float-right">Submit</button>
+        <button type="submit" class="btn btn-outline-secondary float-right">Submit</button>
 
 
     </form>
