--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,38 +1,39 @@
 {% load socialaccount %}
+
+<style>
+.navbar-brand {
+    color : #414224; 
+}
+    
+.nav-link {
+    color : #606c38;
+}
+</style>
+
 <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
-<nav class="navbar navbar-expand-lg navbar-white" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-white">
     <div class="container">
-        <a class="navbar-brand" href="/">Do It Django</a>
+        <a class="navbar-brand" href="/">PLANTY</a>
+        
+    
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+     
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog/">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about_me/">About Me</a>
+                    <a class="nav-link" href="/blog/">Post</a>
                 </li>
                  <li class="nav-item">
                     <a class="nav-link" href="/board/">Board</a>
                 </li>
-            
-                <li class="navbar-nav ml-auto">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about_me/">About</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
