--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,8 +14,8 @@
           {% endif %}
           
         <!-- Title -->
-        <h1 class="mt-4">{{ post.title }}</h1>
-        <h5 class="text-muted">{{ post.hook_text }}</h5>
+        <h3 class="mt-4">{{ post.title }}</h3>
+        <h6 class="text-muted">{{ post.hook_text }}</h6>
 
         <!-- Author -->
         <p class="lead">
@@ -62,7 +62,7 @@
           
           
           {% if post.file_upload %}
-          <a href="{{post.file_upload.url}}" class="btn btn-outline-primary" role="button" download>Download</a>
+          <a href="{{post.file_upload.url}}" class="btn btn-outline-secondary" role="button" download>Download</a>
           
                  
           {% endif %}
@@ -84,7 +84,7 @@
                 <div class="form-group">
                 {{ comment_form | crispy }}
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-outline-secondary">Submit</button>
             </form>
               {% else %}
                   <a  role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" 
@@ -135,7 +135,7 @@
                             </div>
                             
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button> 
+                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cancel</button> 
                                 <a role="button" class="btn btn-danger" href="/blog/delete_comment/{{ comment.pk }}/">
                                     Delete </a>
                                 
