--- a/board/templates/board/board_form.html
+++ b/board/templates/board/board_form.html
@@ -9,7 +9,7 @@
         </table>
             
         
-        <button type="submit" class="btn btn-primary float-right">
+        <button type="submit" class="btn btn-outline-secondary float-right">
             Submit
         </button>
         
