--- a/board/templates/board/board_list.html
+++ b/board/templates/board/board_list.html
@@ -4,7 +4,7 @@
     <table class="table table-bordered border-primary">
   <thead class="table-light">
     <tr>
-      <th scope="col">번호</th>
+<!--      <th scope="col">번호</th> -->
       <th scope="col">제목</th>
       <th scope="col">작성자</th>
       <th scope="col">작성일</th>
@@ -13,7 +13,7 @@
   <tbody>
         {% for board in board_list %}
     <tr>
-      <th scope="row">{{ board.pk }}</th>
+<!--      <th scope="row">{{ board.pk }}</th>  -->
         <td><a href="{{ board.get_absolute_url }}">{{ board.title }}</a></td> 
         <!-- 제목에 링크 걸기 - models -->
       <td>{{ board.author }}</td>
@@ -25,9 +25,9 @@
 <hr>
 {% if request.user.is_authenticated %}
 <!-- 로그인 한 사람에 한해서 글쓰기 가능 -->
-    <a href="/board/create/" type="button" class="btn btn-secondary float-right">글쓰기</a>
+    <a href="/board/create/" type="button" class="btn btn-outline-secondary float-right">글쓰기</a>
 {% else %}
-    <a type="button" class="btn btn-secondary float-right" href="#" data-toggle="modal"
+    <a type="button" class="btn btn-outline-secondary float-right" href="#" data-toggle="modal"
        data-target="loginModal">글쓰기</a>
 {% endif %}
 
