--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -4,7 +4,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>플랜티 : PLANTY</title>
+    <title>Planterior</title>
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'single_pages/css/about_me.css' %}" media="screen">
 </head>
@@ -19,51 +19,40 @@
         <div class="container mt-4">
             <div class="row">
                 <div class="col-lg-8">
-                    <h1> 플랜티 : PLANTY </h1>
+                    <h2> Planterior </h2>
                     <br>
                     <p>
-                        센텀은 디자인, 영상, IT를 전문으로 교육하는 기관입니다.<br>
-                        현장 실무형 인재양성이라는 기관의 비전을 달성하기 위해 기업과의 꾸준한 산학협력을 연계하여 체계적인 맞춤식 훈련을 하기 위해 노력하고 ......
+                        식물(plant)과 인테리어(interior)의 합성어로 식물로 실내를 꾸미면서 공기 정화의 효과와 심리적 안정의 효과를 주는 인테리어를 말합니다.<br>
+                        최근에는 미세먼지가 사회의 큰 이슈로 화제가 되자 자연스럽게 실내 인테리어에 대한 관심과 맞물려 공기 정화 효과를 가진 식물들이 주목받기 시작하면서 본격화되었습니다.
                     </p>
                     
-                    <ul>
-                        <li> 훈련 과정</li>
-                        <ul>
-                            <li>디자인 - 반응형(1995 ~ )</li>
-                            <li>IT - 빅테이터 분석, 인공지능(1950 ~) </li>
-                        </ul>
-                        <li>경력사항</li>
-                        <ul>
-                            <li>센텀대학교 컴퓨터공학 학사(2002.03 ~ 2007.02) </li>
-                            <li>센텀대학교 대학원 컴퓨터공학 석사(2007.03 ~ 2009.02) </li>
-                        </ul>
+                    
                         
-                    </ul>
+                    
                 </div>
                 <div class="col-lg-4">
-                    <img class="img-fluid" src="{% static 'single_pages/images/2.jpg' %}" alt="">
+                    <img class="img-fluid" src="{% static 'single_pages/images/p2.jpeg' %}" alt="">
                     
                 </div>
             </div>
         </div>
     </section>
-    <section class="bg-right  margin-for-footer">
+    <section class="bg-right margin-bottom: 40px;">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>Portfolio</h1>
+                    <h1>Photo</h1>
                 </div>
             </div>
             
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card" data-toggle="modal" data-target="#excel2022">
-                        <img class="card-img-top" src="{% static 'single_pages/images/excel/excel.jpg' %}" alt="">
+                        <img class="card-img-top" src="{% static 'single_pages/images/p8.jpeg' %}" alt="">
                         <div class="card-body">
-                            <h6 class="card-title">파이썬을 이용한 엑셀업무 자동화[2022.12]</h6>
-                            <p>심장의 찾아 밝은 속에서 쓸쓸하랴? 영락과 역사를 든 끓는다. 무엇이 투명하되 능히 불어 긴지라 가지에 오직 
-                                작고 싹이 뿐이다. 보내는 산야에 장식하는 피가 바이며, 그림자는 찾아 거친 있음으로써 그리하였는가? 풍부하게
-                                가치를 인생을 못하다 말이다. 공자는 아름답고 무한한 뿐이다.</p>
+                            <h6 class="card-title">수경재배(water culture)</h6>
+                            <p>가장 쉽게 접할 수 있는 게 수경재배가 가능한 식물인데,
+화분에서 키우는 것보다 훨씬 간편하고 편리하며 분갈이나 영양분 공급, 주기적인 물 주기 등이 필요 없다는 점이 여태까지 플랜테리어에 어려움을 느낀 사람들에게 가장 큰 장점으로 다가올 것입니다.</p>
                             
                         </div>
                     </div>
@@ -73,12 +62,11 @@
                 
                 <div class="col-lg-4">
                     <div class="card" data-toggle="modal" data-target="#django2022">
-                        <img class="card-img-top" src="{% static 'single_pages/images/django/django.jpg' %}" alt="">
+                        <img class="card-img-top" src="{% static 'single_pages/images/p7.jpeg' %}" alt="">
                         <div class="card-body">
-                            <h6 class="card-title">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.[2022.12]</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
-                                Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                                Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                            <h6 class="card-title">마크라메 행잉플랜트(Macrame hangingplant)</h6>
+                            <p>수경재배식물 외에 공중 식물 또한 인기인데 따로 둘 자리가 없어도 공중에 매달아 놓으면 되어 자리 차지하는 부분 없이 키울 수 있기 때문입니다. 
+공중 식물이 인기를 끌면서 공중에 화분들을 매달아 놓을 수 있는 방법 또한 인기를 끌었는데 마크라메 행잉플랜트가 바로 그 방법 중 하나입니다..</p>
                             
                         </div>
                     </div>
@@ -88,12 +76,11 @@
                 
                 <div class="col-lg-4">
                     <div class="card" data-toggle="modal" data-target="#python2022">
-                        <img class="card-img-top" src="{% static 'single_pages/images/python/python.png' %}" alt="">
+                        <img class="card-img-top" src="{% static 'single_pages/images/p6.jpeg' %}" alt="">
                         <div class="card-body">
-                            <h6 class="card-title">Sed ut perspiciatis unde omnis iste natus error[2022.12]</h6>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
-                                totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                                dicta sunt explicabo.</p>
+                            <h6 class="card-title">테라리엄(terrarium)</h6>
+                            <p>공중에 식물을 두는 방법으로는 테라리엄(trrarium)이 있습니다.
+테라리엄은 Terra(땅) 과 Arium(용기, 방)의 합성어로 용기에 식물을 재배하는 방법을 말합니다. 어떤 용기든 가능은 하지만 보통 유리병으로 이에 보틀 가든이라고도 불립니다. </p>
                             
                         </div>
                     </div>
@@ -113,7 +100,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="excel2022ModalLabel">파이썬을 이용한 엑셀업무 자동화[2022.12]</h5>
+        <h5 class="modal-title" id="excel2022ModalLabel">수경재배(water culture)</h5>
        
         
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -123,14 +110,13 @@
       <div class="modal-body">
         <div class="row">
             <div class="col-lg-7">
-                <img class="img-fluid" src="{% static 'single_pages/images/excel/excel.jpg' %}" alt="">
+                <img class="img-fluid" src="{% static 'single_pages/images/p8.jpeg' %}" alt="">
                 
             </div>
             <div class="col-lg-5">
                 <p>
-                    심장의 찾아 밝은 속에서 쓸쓸하랴? 영락과 역사를 든 끓는다. 무엇이 투명하되 능히 불어 긴지라 가지에 오직 
-                                작고 싹이 뿐이다. 보내는 산야에 장식하는 피가 바이며, 그림자는 찾아 거친 있음으로써 그리하였는가? 풍부하게
-                                가치를 인생을 못하다 말이다. 공자는 아름답고 무한한 뿐이다
+                    가장 쉽게 접할 수 있는 게 수경재배가 가능한 식물인데,
+화분에서 키우는 것보다 훨씬 간편하고 편리하며 분갈이나 영양분 공급, 주기적인 물 주기 등이 필요 없다는 점이 여태까지 플랜테리어에 어려움을 느낀 사람들에게 가장 큰 장점으로 다가올 것입니다.
                 </p>
             </div>
        
@@ -150,7 +136,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="django2022ModalLabel">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.[2022.12]</h5>
+        <h5 class="modal-title" id="django2022ModalLabel">마크라메 행잉플랜트(Macrame hangingplant)</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -159,14 +145,13 @@
       <div class="modal-body">
         <div class="row">
             <div class="col-lg-7">
-                <img class="img-fluid" src="{% static 'single_pages/images/django/django.jpg' %}" alt="">
+                <img class="img-fluid" src="{% static 'single_pages/images/p7.jpeg' %}" alt="">
                 
             </div>
             <div class="col-lg-5">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
-                                Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                                Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    수경재배식물 외에 공중 식물 또한 인기인데 따로 둘 자리가 없어도 공중에 매달아 놓으면 되어 자리 차지하는 부분 없이 키울 수 있기 때문입니다. 
+공중 식물이 인기를 끌면서 공중에 화분들을 매달아 놓을 수 있는 방법 또한 인기를 끌었는데 마크라메 행잉플랜트가 바로 그 방법 중 하나입니다.
                 </p>
             </div>
         
@@ -187,7 +172,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="python2022ModalLabel">Sed ut perspiciatis unde omnis iste natus error[2022.12]</h5>
+        <h5 class="modal-title" id="python2022ModalLabel">테라리엄(terrarium)</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -195,14 +180,13 @@
       <div class="modal-body">
         <div class="row">
             <div class="col-lg-7">
-                <img class="img-fluid" src="{% static 'single_pages/images/python/python.png' %}" alt="">
+                <img class="img-fluid" src="{% static 'single_pages/images/p6.jpeg' %}" alt="">
                 
             </div>
             <div class="col-lg-5">
                 <p>
-                   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
-                                totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                                dicta sunt explicabo.
+                   공중에 식물을 두는 방법으로는 테라리엄(trrarium)이 있습니다.
+테라리엄은 Terra(땅) 과 Arium(용기, 방)의 합성어로 용기에 식물을 재배하는 방법을 말합니다. 어떤 용기든 가능은 하지만 보통 유리병으로 이에 보틀 가든이라고도 불립니다. 
                 </p>
             </div>
        
